<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_tours"
        android:icon="@drawable/map"
        android:title="@string/title_tours"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/gallery"
        android:title="@string/title_gallery"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/footsteps"
        android:title="@string/title_profile"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_instructions"
        android:icon="@drawable/instructions"
        android:title="@string/title_instructions"
        app:showAsAction="always|withText"/>


</menu>
